[package]
name = "delivery"
license = "NONE"
description = "simply a test!"
homepage = "https://example.com/"
version = "0.1.0"
authors = ["Daniel Conley <danielc030417@gmail.com>"]
edition = "2018"

[[bin]]
name = "cargo-pack"
path = "src/main.rs"

[dependencies]
cargo_metadata = "0.11.2"
serde = "1.0.115"
serde_json = "1.0.57"
tempdir = "0.3.7"
walkdir = "2.3.1"
zip = "0.5.7"
